docs/api/qiskit/0.41/qiskit.providers.ibmq.BackendJobLimit.mdx
---
title: BackendJobLimit (v0.41)
description: API reference for qiskit.providers.ibmq.BackendJobLimit in qiskit v0.41
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.BackendJobLimit
---

<Admonition title="Warning" type="caution">
  The package `qiskit-ibmq-provider` is being deprecated and its repo is going to be archived soon. Please transition to the new packages. More information in [https://ibm.biz/provider\_migration\_guide](https://ibm.biz/provider_migration_guide)
</Admonition>

# BackendJobLimit

<Class id="qiskit.providers.ibmq.BackendJobLimit" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.20/qiskit/providers/ibmq/backendjoblimit.py" signature="BackendJobLimit(maximum_jobs, running_jobs, **kwargs)" modifiers="class">
  Bases: `object`

  Job limit for a backend.

  Represent the job limit for a backend on a specific provider. This instance is returned by the [`IBMQBackend.job_limit()`](qiskit.providers.ibmq.IBMQBackend#job_limit "qiskit.providers.ibmq.IBMQBackend.job_limit") method.

  ### maximum\_jobs

  <Attribute id="qiskit.providers.ibmq.BackendJobLimit.maximum_jobs">
    The maximum number of concurrent jobs this account is allowed to submit to this backend, with this provider.
  </Attribute>

  ### running\_jobs

  <Attribute id="qiskit.providers.ibmq.BackendJobLimit.running_jobs">
    The current number of active jobs on this backend, with this provider.
  </Attribute>

  BackendJobLimit constructor.

  **Parameters**

  *   **maximum\_jobs** (`int`) – The maximum number of concurrent jobs this account is allowed to submit to this backend, with this provider.
  *   **running\_jobs** (`int`) – The current number of active jobs on this backend, with this provider.
  *   **kwargs** (`Any`) – Additional attributes that will be added as instance members.
</Class>

